big update: backend full completed